css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&display=swap");

:root {
  --windowPadding: 1rem;
}

* {
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: "Kalam", cursive;
}

p {
  line-height: 1.6;
  padding: var(--windowPadding);
}

.pokemon-item {
  font-weight: 700;
  margin-bottom: 0.2rem;
}

header {
  display: flex;
  padding: var(--windowPadding);
  border-bottom: 1px solid rgb(0, 0, 0, 0.2);
}

.navbar-brand img {
  min-width: 250px;
}

header h1 {
  flex-grow: 1;
  font-size: 2.5rem;
  text-align: center;
}

.search-wrapper {
  position: relative;
  display: flex;
  margin: auto;
  align-items: center;
  flex-wrap: nowrap;
  cursor: pointer;
}

.search-glass {
  min-width: 100px;
}

#pokemon-search::placeholder {
  padding: 0.5rem;
}
#pokemon-search {
  padding: 0.5rem;
}

.pokemon-search-wrapper {
  display: none;
  position: absolute;
  top: 4.8rem;
  left: 0;
  flex-direction: column;
  width: 196px;
  max-height: 100px;
  overflow-y: scroll;
  background-color: #d1ffdf;
  border: 1px solid black;
  z-index: 999;
}

.pokemon-search-wrapper button {
  width: 100%;
  background-color: white;
  color: #1d1d1d;
  border: none;
}

.pokemon-search-wrapper--visible {
  display: flex;
}

.search-sequence {
  font-weight: bold;
  text-decoration: underline;
}

.pokemon-list {
  display: grid;
  margin: 0 auto;
  max-width: 1200px;
  grid-template-columns: repeat(4, 1fr);
  padding: var(--windowPadding);
  list-style: none;
}

.pokemon-list li {
  margin: auto;
  text-align: center;
}

.pokemon-list button {
  min-width: 20ch;
  font-size: 1.5rem;
  font-weight: 700;
  background-color: #d1ffdf;
  color: black;
  border: white;
  cursor: pointer;
}

.loadingMessage {
  text-align: center;
  margin: auto;
  display: none;
}

.visible {
  display: block;
}

.detail-wrapper {
  display: flex;
  justify-content: space-around;
  align-items: center;
  margin-top: 1.5rem;
  gap: 0.5rem;
}

.description-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 1rem;
  column-gap: 0.5rem;
}

.modal-icons {
  max-width: 55px;
  cursor: pointer;
  padding: 0.5rem;
}

.description-wrapper h1,
.description-wrapper p {
  margin: 0;
}

.description-wrapper h1 {
  margin-bottom: 1rem;
}

.description-wrapper p {
  line-height: 0;
}

.pokemon-image {
  min-width: 100px;
}

.arrow-wrapper {
  cursor: pointer;
}

@media all and (max-width: 555px) {
  header {
    flex-direction: column;
    align-items: center;
    gap: 0.5rem;
  }

  h1 {
    font-size: 1.5rem;
    margin: 1.5rem 0 0;
  }

  .pokemon-list {
    grid-template-columns: 1fr 1fr;
    column-gap: 0.3rem;
  }

  .button {
    font-size: 1rem;
  }

  .modal {
    padding: 0.5rem;
  }

  .modal-icons {
    max-width: 25px;
    padding: 0;
  }

  .pokemon-image {
    min-width: 100px;
  }

  .detail-wrapper {
    justify-content: space-evenly;
    gap: 0.2rem;
  }

  .description-wrapper p {
    min-width: max-content;
  }
}

@media all and (min-width: 556px) and (max-width: 1024px) {
  header {
    flex-direction: column;
    align-items: center;
    gap: 0.5rem;
  }

  h1 {
    font-size: 1.5rem;
    margin: 1.5rem 0 0;
  }

  .pokemon-list {
    grid-template-columns: 1fr 1fr;
    column-gap: 0.3rem;
  }

  .button {
    font-size: 1.5rem;
  }
}

